2008-11-20:
    Implemented parallel processing for the model calculation
    with the help of the processing package. Tested and seems to work
    under Linux. However I only see a about 50% speed increase could it 
    be that I have some over head?

2008-11-08:
    Found and corrected a bug in reflectivity, the tabbing of the data
    sets was not compatible with the editor.

2008-11-07: 
    Added errorbar level to the configuration file. It is now possible
    to change the default value.
    Fixed the reset problem of parameters when scanning them.
    Added a point for the current paraemtervalue in the fomscan plot.
    Also added a horizontal line for increase of the fom that determines 
    the errorbars.

2008-11-03: 
    Added and sucessfully tested a new plugin UserFuncs to GenX.
    This allow the user to run custom functions defined in the script.
    Fixed a bug that the program wont close when a saved model is in 
    active...
    Fixed the bug with the boolean flag when importing a table with fit
    parameters into GenX
===============================================================================
2008-11-03: GenX2.0b4 released
2008-11-02:
    Tested and corrected bugs for the commands on the extra data. This is
    now fully implemented and working.
    Fixed plotting of FOM and Pars. Autoscale flag had no effect on the
    updating. Fixed and tested.
    Added a question if the model is not saved when exiting the program.
    Added also scaling to linear autoscaling 5%. Just makes linear plots look
    a bit nicer.
    Implemented a new parameter in the model interdiff.py, taylor_n so that 
    the number of terms in the taylor expansion can be controlled.

2008-10-30:
    Implemented additional commands for extra data. Have only tested that the
    the function remains with original data. Full testing remains to be done.
    Also fixed an error handling bug in data_loader/default.py and sls_sxrd.py
    
2008-10-28: